styles/home.css
/*MOBILE FIRST*/

/*HEADER STYLES */
#header-image {
  max-width: 100%;
  max-height: auto;
  opacity: 90%;
  z-index: 0;
}

/*------------*/

/* MAIN BODY STYLES */
button#rsvp {
  margin: 1em auto;
}

div#info-wrapper div {
  width: 100%;
}

div#info-wrapper h2 i {
  width: 30px;
}

div#info-wrapper h2 i.fa-clock {
  margin-right: 10px;
}

div#info-wrapper p {
  line-height: 1.5;
}

div#countdown {
  background: #e7e6fc;
  border-radius: 2px;
  padding: 1rem;
  text-align: center;
  line-height: 1.5;
  margin-bottom: 10px;
}

div#countdown h2 {
  font-size: 1.5rem;
}

div#countdown p {
  color: #5d445d;
}

/*---------------------*/

/* WEATHER STYLES */

#weather-wrapper {
  background: #8f9fb0;
  color: #5d445d;
  padding: 1em;
  text-align: center;
}

#weather-wrapper h2 {
  font-size: 2em;
}

#weather-flex {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

#temp-wrapper p,
#weather-temp {
  font-size: 2em;
}

/*----------------------*/

/*DESKTOP/TABLET STYLES*/

@media screen and (min-width: 720px) {
  #header-image {
    display: block;
    margin: 0 auto;
  }

  div#info-wrapper {
    display: flex;
    margin: 2em auto;
    width: 80%;
  }

  div#info-wrapper div {
    width: 100%;
  }

  div#info-wrapper h2 {
    font-size: 2rem;
  }
  #temp-wrapper p,
  #weather-temp {
    font-size: 3em;
  }
}

/*----------------------*/

/*LARGE SCREEN STYLES*/

@media screen and (min-width: 1020px) {
  div#countdown {
    width: 50%;
    margin: 0 auto;
  }

  div#weather-wrapper {
    justify-content: center;
  }
}

